# pii-detection

./: .gitignore  README.md  adversarial.ipynb  auxiliary.py  cubebert.ipynb  cubo_data_pipeline.ipynb  data_pipeline.ipynb  decorator.py  embedding_visualization.py  embedding_viz.ipynb  ensemble_training.ipynb  evolutionary_adversarial.ipynb  evolutionary_adversarial.py  inference.ipynb  kingbert.py  pyproject.toml  random_adversarial.ipynb  random_adversarial.py  test_decorator.py  testing.ipynb  training.py  training_adv.py
albert_finetuned/: config.json  model_architecture.txt
data/: albert_val.json  distilbert_val.json
datasets/: datasets.txt
distilbert_finetuned/: config.json  model_architecture.txt
models/: models.txt
notebooks/: cubebert.ipynb  inference.ipynb
old/: auxiliary.py  data_pipeline.ipynb  ensemble_pipeline.ipynb  ensemble_training.ipynb
src/data/: collate.py  data_pipeline.py  evolutionary_adversarial.ipynb  io.py
src/decorator/: decorator.py  test_decorator.py
src/models/: cubebert.py
src/nlp_project/data/: __init__.py  collate.py  data_pipeline.py  evolutionary_adversarial.py  io.py  random_adversarial.py
src/nlp_project/models/: __init__.py  cubebert.py
src/nlp_project/pii_decorator/: pii_decorator.py  test_decorator.py
src/nlp_project/training/: training.py  training_adv.py  training_ensemble.py
src/nlp_project/utils/: __init__.py  labels.py  metrics.py
src/training/: training.py  training_adv.py  training_ensemble.py
src/utils/: labels.py  metrics.py
