[tool.poetry]
name = "nlp-project"
version = "0.1.0"
description = ""
authors = ["Group 2"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
transformers = "^4.51.3"
evaluate = "^0.4.3"
wandb = "^0.19.11"
numpy = "^2.2.6"
torch = "^2.7.0"
openai = "^1.79.0"
spacy = "^3.8.4"
scikit-learn = "^1.6.1"
tqdm = "^4.67.1"
seqeval = "^1.2.2"
matplotlib = "^3.10.3"
termcolor = "^3.1.0"
pandas = "^2.2.3"
adjusttext = "^1.3.0"
seaborn = "^0.13.2"
umap-learn = "^0.5.7"
notebook = "^7.4.2"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
